gitea/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: hprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: server-dedicated
                    operator: In
                    values: ["true"]
      containers:
        - name: gitea
          image: gitea/gitea:1.25
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: gitea-volume
              mountPath: /data
      volumes:
        - name: gitea-volume
          persistentVolumeClaim:
            claimName: gitea-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-postgres
  namespace: hprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-postgres
  template:
    metadata:
      labels:
        app: gitea-postgres
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: server-dedicated
                    operator: In
                    values: ["true"]
      containers:
        - name: gitea-postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: gitea-postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: gitea-postgres-volume
          persistentVolumeClaim:
            claimName: gitea-postgres-pvc
