gitea/base/gitea.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: hprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.25
          # ports:
          #   - containerPort: 3000
          #   - containerPort: 22
          volumeMounts:
            - name: gitea-volume
              mountPath: /data
      volumes:
        - name: gitea-volume
          persistentVolumeClaim:
            claimName: gitea-pvc
      affinity:
        # prefer the Raspberries fully server dedicated (with ubuntu-server)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 5
              preference:
                matchExpressions:
                  - key: server-dedicated
                    operator: In
                    values: ["true"]
        # prefer to be provisoned alongwise it's postgres pod
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["gitea-postgres"]
                topologyKey: "cluster-name"
        # strongly prefer to have it's pod provisoned in diferent nodes
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["gitea"]
                topologyKey: "cluster-name"
