gitea/base/gitea-postgres.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgres
spec:
  selector:
    app: gitea-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-postgres
  # namespace: hprod
spec:
  serviceName: "gitea-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: gitea-postgres
  template:
    metadata:
      labels:
        app: gitea-postgres
    spec:
      containers:
        - name: gitea-postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: gitea-postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: gitea-postgres-volume
          persistentVolumeClaim:
            claimName: gitea-postgres-pvc
      affinity:
        # prefer the Raspberries fully server dedicated (with ubuntu-server)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 5
              preference:
                matchExpressions:
                  - key: server-dedicated
                    operator: In
                    values: ["true"]
        # prefer to be provisoned alongwise it's gitea pod
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["gitea"]
                topologyKey: "kubernetes.io/hostname"
        # strongly prefer to have it's pod provisoned in diferent nodes
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["gitea-postgres"]
                topologyKey: "kubernetes.io/hostname"
