gitea/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: hprod
spec:
  selector:
    app: gitea
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 22
      nodePort: 32222
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgres
  namespace: hprod
spec:
  selector:
    app: gitea-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
