gitea/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    # Adicione anotações do seu Ingress Controller, ex: nginx, traefik
    # kubernetes.io/ingress.class: "nginx"
    # Para Traefik, você pode precisar de algo como:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: "gitea.example.com" # Mude para seu domínio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
  # tls:
  #  - hosts:
  #    - gitea.example.com
  #    secretName: gitea-tls-secret # Descomente e configure se tiver um certificado TLS
